--- a/PDFResumeMakerUsingJSON/PDFResumeMakerUsingJSON/packages.config
+++ b/PDFResumeMakerUsingJSON/PDFResumeMakerUsingJSON/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.6.1" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
